@@ -1,6 +1,13 @@
 
 * Release history
 
+** Main branch change
+
+- Enhance aider-plain-read-string with better completion and history
+  - This came from https://github.com/MatthewZMD/aidermacs/commit/cbb9bada03681d7ab27ce3bce1c9be9e9469da99
+- Deprecate aider-other-process-command menu item. aider comint session already have command completion, so there is no advantage to use this menu item.
+- Update keyword completion and highlight given aider in-chat commands change
+
 ** v0.5.5
 
 - magit rebase style file operation in aider-prompt-mode, and send block line by line command (request from Spike-Leung) 
